--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tslib": "^2.5.2"
+    "tslib": "^2.5.2",
+    "use-immer": "^0.9.0"
   }
 }
