--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "mini-css-extract-plugin": "^2.7.6",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^7.3.2",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
     "script-loader": "^0.7.2",
