Update package.json version to 0.2.0

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sampler",
-  "version": "0.0.1",
-  "description": "Concord Consortium Starter CODAP Plugin",
+  "version": "0.2.0",
+  "description": "Concord Consortium CODAP Sampler Plugin",
   "main": "index.js",
   "browserslist": "> 0.2%, last 5 versions, Firefox ESR, not dead, not ie > 0",
   "jest": {
