--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "scripts": {
     "start": "webpack serve --no-https",
+    "start:port": "node start-custom-port.js",
     "start:secure": "webpack serve",
     "start:secure:no-certs": "webpack serve --no-https-request-cert",
     "build": "npm-run-all lint:build build:webpack",
