--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@svgr/webpack": "^8.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.1",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
@@ -133,6 +134,7 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "immer": "^10.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tslib": "^2.5.2",
