Implement Hide Model Functionality with visibility toggle component and fix TypeScript/ESLint issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "strict": true,
-    "types": [],
+    "types": ["node"],
     "jsx": "react",
     "lib": ["dom", "dom.iterable", "es2018"]
   },
