--- a/package.json
+++ b/package.json
@@ -135,8 +135,10 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "chart.js": "^4.4.8",
     "immer": "^10.1.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "tslib": "^2.5.2",
     "use-immer": "^0.9.0"
