--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "jest": {
     "preset": "ts-jest/presets/js-with-ts",
     "setupFilesAfterEnv": [
-      "<rootDir>/src/test/setupTests.ts"
+      "<rootDir>/src/test/setupTests.ts",
+      "<rootDir>/src/test/setupAxe.ts"
     ],
     "testEnvironment": "jsdom",
     "transform": {
@@ -58,7 +59,8 @@
     "test:cypress:open": "cypress open",
     "test:coverage:cypress:open": "cypress open --env coverage=true",
     "test:full": "npm-run-all test test:cypress",
-    "strings:pull": "node bin/pull-strings.js --prefix=DG.plugin --out=./src/strings.json"
+    "strings:pull": "node bin/pull-strings.js --prefix=DG.plugin --out=./src/strings.json",
+    "test:a11y": "ts-node src/test/a11y-audit.ts"
   },
   "repository": {
     "type": "git",
@@ -76,6 +78,7 @@
     "report-dir": "coverage-cypress"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.10.1",
     "@concord-consortium/codap-plugin-api": "^0.1.5",
     "@cypress/code-coverage": "^3.10.6",
     "@cypress/webpack-preprocessor": "^5.17.1",
@@ -86,6 +89,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.1",
+    "@types/jest-axe": "^3.5.9",
     "@types/node": "^22.13.9",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
@@ -116,6 +120,7 @@
     "iframe-phone": "^1.3.1",
     "istanbul-lib-coverage": "^3.2.0",
     "jest": "^29.5.0",
+    "jest-axe": "^10.0.0",
     "jest-environment-jsdom": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.6",
     "npm-run-all": "^4.1.5",
