--- a/package.json
+++ b/package.json
@@ -36,20 +36,22 @@
     ]
   },
   "scripts": {
-    "start": "webpack serve --no-https",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest",
+    "test:a11y": "jest src/test/a11y-test-helpers.ts src/test/meaningful-sequence.test.tsx",
     "start:port": "node start-custom-port.js",
     "start:secure": "webpack serve",
     "start:secure:no-certs": "webpack serve --no-https-request-cert",
-    "build": "npm-run-all lint:build build:webpack",
     "build:webpack": "webpack --mode production",
     "build:top-test": "cross-env DEPLOY_PATH=specific/release/ webpack --mode production --output-path top-test/specific/release && cp top-test/specific/release/index-top.html top-test/",
-    "lint": "eslint \"./src/**/*.{js,jsx,ts,tsx}\" \"./cypress/**/*.{js,jsx,ts,tsx}\"",
     "lint:build": "eslint -c \".eslintrc.build.js\" \"./src/**/*.{js,jsx,ts,tsx}\" \"./cypress/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx}\" \"./cypress/**/*.{js,jsx,ts,tsx}\"",
     "lint:style": "eslint -c \".eslintrc.style.js\" \"./src/**/*.{js,jsx,ts,tsx}\" \"./cypress/**/*.{js,jsx,ts,tsx}\"",
     "lint:style:fix": "eslint -c \".eslintrc.style.js\" \"./src/**/*.{js,jsx,ts,tsx}\" \"./cypress/**/*.{js,jsx,ts,tsx}\"",
     "serve:top-test": "npx http-server top-test",
-    "test": "jest",
     "test:all": "npm-run-all build test start",
     "test:coverage": "jest --coverage",
     "test:debug": "node --nolazy --inspect-brk ./node_modules/.bin/jest --runInBand --no-cache",
@@ -60,7 +62,7 @@
     "test:coverage:cypress:open": "cypress open --env coverage=true",
     "test:full": "npm-run-all test test:cypress",
     "strings:pull": "node bin/pull-strings.js --prefix=DG.plugin --out=./src/strings.json",
-    "test:a11y": "jest src/test/meaningful-sequence.test.tsx src/test/resize-text.test.tsx src/test/focus-order.test.tsx src/test/focus-visible.test.tsx src/test/error-identification.test.tsx"
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
